--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
