--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "chris-and-tiff",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://christopherhuii.github.io/huindrawan",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-media": "^1.8.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "1.1.4"
   },
@@ -18,6 +21,8 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   }
 }
