trying to fix deployment

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -b gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
