--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "react-scripts test --env=jsdom",
     "clean": "rm -rf node_modules/gh-pages/.cache",
     "predeploy": "npm run build",
-    "deploy": "npm run clean && gh-pages -b gh-pages -d build",
+    "deploy": "npm run clean && gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
